--- a/web/src/components/Checkbox/styles.css
+++ b/web/src/components/Checkbox/styles.css
@@ -1,8 +1,12 @@
 .checkbox-block {
+  display: flex;
+  align-items: center;
   margin-top: 8px;
 }
 
 .checkbox-block input {
-  border-radius: 5px;
-  margin-right: 5px;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 0.8rem;
+  margin-right: 0.8rem;
 }
