feat: layout change

--- a/web/src/styles/global.css
+++ b/web/src/styles/global.css
@@ -18,7 +18,7 @@
   --color-box-base: #FFFFFF;
   --color-box-footer: #FAFAFC;
   --color-background-topics: #9264ff;
-  --color-background-landing: rgb(245, 245, 245);
+  --color-background-landing: #fff;
 
   font-size: 60%;
 }
