--- a/web/src/components/TeacherItem/styles.css
+++ b/web/src/components/TeacherItem/styles.css
@@ -1,4 +1,5 @@
 .teacher-item {
+  min-width: 32rem;
   background: var(--color-box-base);
   border: 1px solid var(--color-line-in-white);
   border-radius: 0.8rem;
@@ -70,6 +71,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.teacher-item footer p {
+  margin-right: 2rem;
 }
 
 .teacher-item footer p strong {
