--- a/web/src/pages/Landing/styles.css
+++ b/web/src/pages/Landing/styles.css
@@ -2,19 +2,20 @@
   width: 100vw;
   height: 100vh;
 
+  color: var(--color-text-base);
+  background: var(--color-background-landing);
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0 2rem;
-
-  color: var(--color-text-base);
-  background: var(--color-background-landing);
+  padding: 0 4rem;
 }
 
 #page-landing h1 {
-  line-height: 3.2rem;
-  font-size: 5rem;
+  line-height: 4.8rem;
+  font-size: 6rem;
+  font-weight: 700;
   margin-bottom: 4rem;
   color: var(--color-text-title);
 }
@@ -29,13 +30,13 @@
 
 .buttons-container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
   margin: 8rem 0;
 }
 
 .buttons-container a {
-  width: 30rem;
+  width: 34rem;
   height: 8rem;
   border-radius: 0.8rem;
   font: 700 2rem Archivo;
@@ -81,7 +82,10 @@
   color: var(--color-primary-dark);
 }
 
-@media (min-width: 700px) {
+@media (min-width: 740px) {
+  .buttons-container {
+    flex-direction: row;
+  }
   .buttons-container a:first-child {
     margin-bottom: 1rem;
     margin-right: 2rem;
